--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1"
+  },
+  "dependencies": {
+    "@radix-ui/react-switch": "^1.0.3"
   }
 }
