--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astro-ui",
   "version": "1.0.0",
-  "description": "A React component library built with Tailwind CSS following the Material Design 3 guidelines.",
+  "description": "A collection of Tailwind CSS styles to build components influenced by the Material Design 3 guidelines.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
@@ -10,38 +10,45 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rollup -c",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "docs:dev": "cd docs && next dev",
+    "docs:build": "cd docs && next build",
+    "docs:start": "cd docs && next start",
+    "docs:lint": "cd docs && next lint"
   },
   "keywords": [],
   "author": "Jack Waterfall",
   "license": "ISC",
   "devDependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@rollup/plugin-commonjs": "^25.0.2",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.1",
-    "@storybook/addon-essentials": "^7.0.24",
-    "@storybook/addon-interactions": "^7.0.24",
-    "@storybook/addon-links": "^7.0.24",
-    "@storybook/addon-styling": "^1.3.1",
-    "@storybook/blocks": "^7.0.24",
-    "@storybook/react": "^7.0.24",
-    "@storybook/react-vite": "^7.0.24",
-    "@storybook/testing-library": "^0.2.0",
+    "@types/node": "20.3.2",
     "@types/react": "^18.2.14",
+    "@types/react-dom": "18.2.6",
     "autoprefixer": "^10.4.14",
+    "eslint": "8.43.0",
+    "eslint-config-next": "13.4.7",
+    "gray-matter": "^4.0.3",
+    "next": "13.4.7",
+    "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^4.10.1",
     "rollup": "^3.25.3",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "storybook": "^7.0.24",
     "tailwindcss": "^3.3.2",
     "tslib": "^2.6.0",
     "typescript": "^5.1.3",
@@ -50,13 +57,7 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1"
-  },
-  "dependencies": {
-    "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@radix-ui/react-tooltip": "^1.0.6"
+    "react-icons": "^4.10.1",
+    "tailwindcss": "^3.3.2"
   }
 }
